# clinical-text-survival

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/data/: example.yaml
configs/encoders/: conch.example.yaml
configs/experiments/: clinical_embedding.yaml  clinical_tabular.yaml
configs/text/: clinical_sentence_templates.yaml
scripts/: make_clinical_sentences.py  make_conch_clinical_embeddings.py  make_folds.py  run_clinical_text_survival.py  train_clinical.py
src/clinical_survival/: __init__.py
src/clinical_survival/data/: __init__.py  splits.py
src/clinical_survival/models/: __init__.py  clinical_cox.py  heads.py
src/clinical_survival/models/encoders/: __init__.py  clinical.py
src/clinical_survival/text/: __init__.py  templates.py
src/clinical_survival/training/: __init__.py  artifacts.py  clinical_trainer.py  cross_validation.py
src/clinical_survival/utils/: config.py
