[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clinical-unimodal-survival"
version = "0.1.0"
description = "Clinical-only unimodal Cox survival modeling"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "torch",
  "scikit-learn",
  "pyyaml",
  "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

